Fix the past/present/future alignment

--- a/src/html/organisms/past-present-future.scss
+++ b/src/html/organisms/past-present-future.scss
@@ -8,7 +8,6 @@
   @media (min-width: 600px) {
     flex-direction: row;
     padding: 24px;
-    align-items: center;
   }
 
   section {
